compiler and transpiler and package.json scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "pegjs": "^0.10.0"
+  },
+  "scripts": {
+    "transpile": "node transpiler.js",
+    "compile": "node compiler.js"
   }
 }
